took out the cumslut

--- a/flaskProject/index.html
+++ b/flaskProject/index.html
@@ -16,7 +16,7 @@
         </section>
 
         <section class="body">
-            <p id="cumslut">Please Enter a Twitter URL to Find the Sentiment</p>
+            <p id="ut">Please Enter a Twitter URL to Find the Sentiment</p>
             <input class="textbox" type=text id="yerr"></input><br>
             <button class="btn" onclick="getResult()">Get the result</button>
             <p id="result"></p>
