--- a/flaskProject/index.html
+++ b/flaskProject/index.html
@@ -20,6 +20,7 @@
             <p id="ut">Please Enter a Twitter URL to Find the Sentiment</p>
             <input class="textbox" type=text id="yerr"></input><br>
             <button class="btn" onclick="getResult()">Get the result</button>
+            <p class="tweet" id="tweet"></p>
             <p id="result"></p>
         </section>
 
